[package]
name = "infra-bits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rand"]
rand = ["dep:rand", "dep:smallvec"]

[dependencies]
rand = { version = "0.8.5", optional = true } 
smallvec = { version = "1.13.1", optional = true }
